--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
+    "com.unity.entities": "0.11.2-preview.1",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.rendering.hybrid": "0.5.2-preview.4",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
+    "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
     "com.unity.modules.imgui": "1.0.0",
     "com.unity.modules.particlesystem": "1.0.0",
     "com.unity.modules.physics": "1.0.0",
-    "com.unity.modules.ui": "1.0.0"
+    "com.unity.modules.ui": "1.0.0",
+    "com.unity.modules.uielements": "1.0.0"
   }
 }
